# ode_visualizer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat
include/IO/: InputHandler.hpp  Window.hpp
include/backend/: MotionSystem.hpp  Simulation.hpp  expr.hpp  parser.hpp  solver.hpp  utility.hpp
include/expr/: dynamic.hpp  expr.hpp  lambda.hpp  parser.hpp  stack.hpp  tree.hpp  uility.hpp
include/graphics/: Camera.hpp  Mesh.hpp  Program.hpp  Vec3.hpp  Window.hpp
include/gui/: App.hpp  Camera.hpp  ControlPanel.hpp  MainWindow.hpp  Mesh.hpp  OpenGLWindow.hpp  SimulationControler.hpp  SimulationController.hpp  Viewport.hpp
include/gui/App/: App.hpp
include/gui/Components/: ControlPanel.hpp  EquationsList.hpp  MainWindow.hpp  ShaderBackdrop.hpp  SimulationController.hpp  SimulationManager.hpp  Viewport.hpp
include/gui/Graphics/: Camera.hpp  Mesh.hpp  Particle.hpp  ParticleShader.hpp  WorldGrid.hpp
include/gui/components/: MainWindow.hpp  PreferencesPanel.hpp  SimulationManager.hpp  Viewport.hpp
include/gui/graphics/: Camera.hpp  GridShader.hpp  Mesh.hpp  OpenGLFunctions.hpp  Particle.hpp
include/simulation/: Simulation.hpp
include/solver/: parser.hpp  solver.hpp
include/tests/: eval_test.hpp
include/utility/: utility.hpp
shader/: shader.frag  shader.vert
src/: CMakeLists.txt  main.cpp
src/IO/: CMakeLists.txt  InputHandler.cpp  Window.cpp
src/backend/: MotionSystem.cpp  Simulation.cpp  expr.cpp  parser.cpp  solver.cpp
src/expr/: CMakeLists.txt  dynamic.cpp  parser.cpp  tree.cpp
src/graphics/: CMakeLists.txt  Camera.cpp  Mesh.cpp  Program.cpp  Vec3.cpp  Window.cpp
src/gui/: App.cpp  CMakeLists.txt  Camera.cpp  ControlPanel.cpp  MainWindow.cpp  Mesh.cpp  OpenGLWindow.cpp  SimulationControler.cpp  SimulationController.cpp  Viewport.cpp
src/gui/App/: App.cpp  App.qss
src/gui/Components/: ControlPanel.cpp  EquationsList.cpp  MainWindow.cpp  ShaderBackdrop.cpp  SimulationController.cpp  Viewport.cpp
src/gui/Graphics/: Camera.cpp  GridShader.cpp  Mesh.cpp  Particle.cpp  ParticleShader.cpp  WorldGrid.cpp
src/gui/Graphics/shaders/: shader.vert
src/gui/Graphics/shaders/particle/: particle.frag  particle.vert
src/gui/Graphics/shaders/world_grid/: world_grid.frag  world_grid.vert
src/gui/app/: App.qss
src/gui/components/: MainWindow.cpp  PreferencesPanel.cpp  SimulationManager.cpp  Viewport.cpp
src/gui/graphics/: OpenGLFunctions.cpp
src/gui/graphics/shaders/particle/: particle.frag
src/gui/graphics/shaders/world_grid/: world_grid.vert
src/simulation/: CMakeLists.txt  Simulation.cpp
src/solver/: CMakeLists.txt  parser.cpp  solver.cpp
src/tests/: eval_test.cpp
